styles, recipe photo and html updated

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
     </header>
     <section class="recipe__picture">
-        <img src="static/background.jpg" alt="" class="recipe__picture__img">
+        <img src="static/photo1.png" alt="" class="recipe__picture__img">
     </section>
     <main>
         <h2 class="main__ingredients__header">Ingredients</h2>
